--- a/styles.css
+++ b/styles.css
@@ -374,7 +374,7 @@ body {
   letter-spacing: 0.1em;
   font-weight: 600;
   font-size: 0.8rem;
-  background: rgba(230, 57, 70, 0.1);
+  background: #bfdb02;
   padding: 0.35rem 1rem;
   border-radius: 30px;
 }
