--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ body {
   font-size: 0.75rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  color: #0432c7;
+  color: #bfdb02;
   font-weight: 600;
   display: inline-block;
   margin-bottom: 1rem;
